fix: Restore persistent test accounts and banking database stability
- Updated DataInitializer to enforce valid Bcrypt hashes on test accounts
- Fixed malformed password hashes and invalid 'FIXED_DEPOSIT' enum mapping in V17 seed migration
- Configured CORS in SecurityConfig to allow localhost:3001 connections
- Redesigned LoginPage with 9-button quick authentication grid for rapid testing
- Updated TestCredentialsPage to reflect the correct active banking and admin roles
- Added lombok annotation processor path to pom.xml for clean backend builds
- Removed legacy light/dark mode theme toggle from Navbar