@@ -129,14 +129,14 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOriginPatterns(
-                List.of("http://localhost:*", "https://yourdomain.com")
+        config.setAllowedOrigins(
+                Arrays.asList("http://localhost:3000", "http://localhost:3001", "http://127.0.0.1:3000", "http://127.0.0.1:3001")
         );
         config.setAllowedMethods(
                 Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS")
         );
         config.setAllowedHeaders(
-                Arrays.asList("Authorization", "Content-Type", "X-Requested-With")
+                List.of("*")
         );
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
